@@ -18,4 +18,3 @@ ReconnectAction.confirmReconnect=Close the current connection to the database an
 
 SQLFilterAction.singleObjectMessage=You must have a single table or view selected to activate the SQL Filter
 
-ViewObjectAtCursorInObjectTreeAction.error.objectnotfound=Could not locate the database object ''{0}'' in Object tree
