@@ -80,3 +80,5 @@ graph.hideScrollBars=Hide scrollbars
 graph.printGraph=Print graph
 graph.saveGraphImagesToFile=Save Graph images to file
 
+
+graph.viewTableInObjectTree=View table in Object tree
